enhance(scanner): improve database scanner factory
- Add intelligent matching for unknown database types
- Implement fallback mechanism for database type detection
- Add better error messages with supported types
- Improve thread-safety in scanner creation